# Peerlogic_dental

./: Dockerfile  README.md  dental_no_show_prediction.ipynb  pyproject.toml  summary.md
api/: model_prediction.py
common/: models.py  utils.py
core/: features.py  prediction.py  training.py
models/: prediction_model.pkl
scripts/: model_training.py
tests/: __init__.py  test_api.py
